...

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
...

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                        <LinearLayout
                            android:id="@+id/addExpenses"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                            <LinearLayout
                                android:id="@+id/linearLayout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <EditText
                                    android:id="@+id/expenseText"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
...

                            <LinearLayout
                                android:id="@+id/linearLayout2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <Spinner
                                    android:id="@+id/descriptionCombo"
                                    android:layout_width="143dp"
                                    android:layout_height="wrap_content"
...

                                <Button
                                    android:id="@+id/addDescButton"
                                    style="?android:attr/buttonStyleSmall"
                                    android:layout_width="wrap_content"
...

                            <LinearLayout
                                android:id="@+id/linearLayout3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <Button
                                    android:id="@+id/dateButton"
                                    android:layout_width="90dp"
                                    android:layout_height="match_parent"
...

                            <Button
                                android:id="@+id/saveButton"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
...

                        <LinearLayout
                            android:id="@+id/ManageExpenses"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                            <RelativeLayout
                                android:id="@+id/linearLayout6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <ImageButton
                                    android:id="@+id/infoDateRange"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                            <RelativeLayout
                                android:id="@+id/linearLayout14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <ImageButton
                                    android:id="@+id/backUpInfoButton"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                        <LinearLayout
                            android:id="@+id/ChartExpenses"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...
                                android:layout_height="wrap_content"
                                android:text="@string/annual_chart"
                                android:id="@+id/annualChartButton"
                                android:background="@drawable/buttonschartstyle"
                                android:layout_gravity="center_horizontal"
...
