<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculate_annual_expenses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.irokottaki.moneycontrol.activity.CalculateAnnualExpensesActivity"
    android:background="@drawable/backgroundimg">

    <ImageView
...
        app:layout_editor_absoluteY="21dp"
        android:textSize="20sp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expensesSpinner"
        app:layout_editor_absoluteX="50dp"
        app:layout_editor_absoluteY="50dp"
        app:layout_constraintTop_toBottomOf="@+id/selectExpenseLabel"
        android:layout_marginTop="70dp" />

    <Spinner
...
    <Button
        android:text="@string/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_editor_absoluteX="232dp"
        app:layout_editor_absoluteY="140dp"
        android:id="@+id/calculateButton"
        android:background="@drawable/buttonschartstyle"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="140dp"
        android:layout_marginStart="140dp" />

</RelativeLayout>
...
